# datapizza-ai-modded

./: .gitignore  gameorchestrator.py  helpers.py  main.py  market_agent.py  orchestrator.py  pyproject.toml  pyrightconfig.json  requirements.txt  server_client.py  snapshot.py  strategy_agent.py
client_template/: client_template.py  recipes.json  recipes_pretty.json  recipes_utf8.json  requirements.txt  test_client.py
hackapizza/: auction_analyst.py  bid_agent.py  debug_meals.py  explore.py  extract_ingredients.py  lista_completa_ingredienti.txt  main.py  market_agent.py  menu_agent.py  menu_agent_old.py  orchestrator.py  piatti_distanti.json  requirements.txt  server_client.py  serving_agent.py  snapshot.py  strategy_agent.py
hackapizza/explorer_data/: auction_history.json  bid_list.json  bid_recommendations.json  market_log.json  strategy.json  surplus_ingredients.json
hackapizza/explorer_data/2026-02-28_17-38-10/: bid_history_turn6.json  competitors_menus.json  market.json  meals_turn6.json  restaurant.json  restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_13-59-36/: competitors_menus.json
hackapizza/explorer_data/snapshots/2026-02-28_14-00-37/: recipes.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-02-10/: competitors_menus.json  restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-11-10/: summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-30-54/: restaurant.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-32-38/: summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-34-06/: summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-37-33/: summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-39-40/: restaurants.json
hackapizza/explorer_data/snapshots/2026-02-28_14-41-02/: competitors_menus.json  restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-43-57/: competitors_menus.json  restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-47-17/: restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-51-23/: restaurants.json  summary.json
hackapizza/explorer_data/snapshots/2026-02-28_14-52-10/: competitors_menus.json  restaurant.json  summary.json
hackapizza/support_scripts/: select_dishes.py
prompts/: chef_agent.yaml  pr_agent.yaml  shark_agent.yaml
(+159 files in other folders)
